load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "pending_action_runs.go",
        "quick_actions.go",
        "range_store.go",
    ],
    importpath = "github.com/uber/scip-lsp/src/ulsp/controller/quick-actions",
    visibility = ["//visibility:public"],
    deps = [
        "//src/ulsp/controller/doc-sync:go_default_library",
        "//src/ulsp/controller/quick-actions/action:go_default_library",
        "//src/ulsp/controller/quick-actions/actions-java:go_default_library",
        "//src/ulsp/entity/ulsp-plugin:go_default_library",
        "//src/ulsp/factory:go_default_library",
        "//src/ulsp/gateway/ide-client:go_default_library",
        "//src/ulsp/internal/errors:go_default_library",
        "//src/ulsp/internal/executor:go_default_library",
        "//src/ulsp/mapper:go_default_library",
        "//src/ulsp/repository/session:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "pending_action_runs_test.go",
        "quick_actions_test.go",
        "range_store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/ulsp/controller/doc-sync:go_docsync_gomock_library",
        "//src/ulsp/controller/quick-actions/action:go_action_gomock_library",
        "//src/ulsp/controller/quick-actions/action:go_default_library",
        "//src/ulsp/entity:go_default_library",
        "//src/ulsp/factory:go_default_library",
        "//src/ulsp/gateway/ide-client:go_ideclient_gomock_library",
        "//src/ulsp/internal/errors:go_default_library",
        "//src/ulsp/mapper:go_default_library",
        "//src/ulsp/repository/session:go_repository_gomock_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
