load("@bazel_gomock//rules:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "methods_code_intel.go",
        "methods_document.go",
        "methods_lifecycle.go",
        "methods_window.go",
        "methods_workspace.go",
        "ulsp_daemon.go",
    ],
    importpath = "github.com/uber/scip-lsp/src/ulsp/controller/ulsp-daemon",
    visibility = ["//src/ulsp:__subpackages__"],
    deps = [
        "//src/ulsp/controller/diagnostics:go_default_library",
        "//src/ulsp/controller/doc-sync:go_default_library",
        "//src/ulsp/controller/indexer:go_default_library",
        "//src/ulsp/controller/jdk:go_default_library",
        "//src/ulsp/controller/quick-actions:go_default_library",
        "//src/ulsp/controller/scala-assist:go_default_library",
        "//src/ulsp/controller/scip:go_default_library",
        "//src/ulsp/controller/user-guidance:go_default_library",
        "//src/ulsp/entity:go_default_library",
        "//src/ulsp/entity/ulsp-plugin:go_default_library",
        "//src/ulsp/gateway/ide-client:go_default_library",
        "//src/ulsp/internal/executor:go_default_library",
        "//src/ulsp/internal/fs:go_default_library",
        "//src/ulsp/internal/workspace-utils:go_default_library",
        "//src/ulsp/mapper:go_default_library",
        "//src/ulsp/repository/session:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@dev_lsp_go_jsonrpc2//:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "methods_code_intel_test.go",
        "methods_document_test.go",
        "methods_lifecycle_test.go",
        "methods_window_test.go",
        "methods_workspace_test.go",
        "ulsp_daemon_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//idl/mock:go_fx_gomock_library",
        "//idl/mock:go_jsonrpc2_gomock_library",
        "//src/ulsp/entity:go_default_library",
        "//src/ulsp/entity/ulsp-plugin:go_default_library",
        "//src/ulsp/entity/ulsp-plugin:go_plugin_gomock_library",
        "//src/ulsp/factory:go_default_library",
        "//src/ulsp/gateway/ide-client:go_ideclient_gomock_library",
        "//src/ulsp/internal/executor:go_loader_gomock_library",
        "//src/ulsp/internal/fs:go_fs_gomock_library",
        "//src/ulsp/internal/workspace-utils:go_default_library",
        "//src/ulsp/repository/session:go_repository_gomock_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@dev_lsp_go_jsonrpc2//:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zaptest/observer:go_default_library",
    ],
)

gomock(
    name = "ulspdaemonmock",
    out = "ulspdaemon_mock_for_test.go",
    interfaces = [
        "Controller",
    ],
    library = ":go_default_library",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "ulspdaemonmock",
    self_package = "github.com/uber/scip-lsp/src/ulsp/controller/ulsp-daemon/ulspdaemonmock",
)

go_library(
    name = "go_ulspdaemon_gomock_library",
    srcs = [":ulspdaemonmock"],
    importpath = "github.com/uber/scip-lsp/src/ulsp/controller/ulsp-daemon/ulspdaemonmock",
    visibility = ["//visibility:public"],
    deps = [
        ":go_default_library",
        "//src/ulsp/controller/diagnostics:go_default_library",
        "//src/ulsp/controller/doc-sync:go_default_library",
        "//src/ulsp/controller/indexer:go_default_library",
        "//src/ulsp/controller/jdk:go_default_library",
        "//src/ulsp/controller/quick-actions:go_default_library",
        "//src/ulsp/controller/scala-assist:go_default_library",
        "//src/ulsp/controller/scip:go_default_library",
        "//src/ulsp/controller/user-guidance:go_default_library",
        "//src/ulsp/entity:go_default_library",
        "//src/ulsp/entity/ulsp-plugin:go_default_library",
        "//src/ulsp/gateway/ide-client:go_default_library",
        "//src/ulsp/internal/executor:go_default_library",
        "//src/ulsp/internal/fs:go_default_library",
        "//src/ulsp/internal/workspace-utils:go_default_library",
        "//src/ulsp/mapper:go_default_library",
        "//src/ulsp/repository/session:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@dev_lsp_go_jsonrpc2//:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
